--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,13 @@
 /* Import of Google font Jost*/
 
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jost:ital,wght@0,100..900;1,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Macondo&family=Oswald:wght@200..700&display=swap');
+
+/*CSS variables*/
+
 :root {
     --primary-font: "Jost", serif;
+    --primary-color: #001C55;
+    --primary-background: #CBB9A8;
 }
 
 
@@ -10,4 +15,30 @@
 
 body {
     font-family: var(--primary-font);
+    background-color: var(--primary-background);
+}
+
+main {
+    margin-top: 66px;
+}
+
+
+/*Navbar*/
+
+#navbar {
+    background-color: var(--primary-color);
+}
+
+
+/*Logo*/
+
+#logo {
+    width: 40px;
+}
+
+
+/*Footer*/
+
+#footer {
+    background-color: var(--primary-color);
 }
