--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,25 @@ main {
 }
 
 
+/*Hero*/
+
+#hero {
+    background: url(../img/hero.jpg) no-repeat center center/cover;
+    position: relative;
+    width: 100%;
+    height: 500px;
+}
+
+#cover-box {
+    /*Use rgba to also set transparency*/
+    background-color: rgba(207, 222, 231, .7);
+    position: absolute;
+    bottom: 2rem;
+    padding: 15px 15px;
+    margin-left: 1rem;
+}
+
+
 /*Logo*/
 
 #logo {
