add precipitation on one week forecast and change style so no visible cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,8 +84,15 @@ h1 {
 
 /*Weather styling*/
 
-.card {
+#weekly {
+    margin-top: 20px;
+}
+
+#weeklyCards .card {
     min-width: 183px;
+    background-color: var(--primary-background);
+    border: none;
+    margin-bottom: 10px;
 }
 
 #currentWeather p {
