--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,25 @@ h1 {
 }
 
 
+/*Map responsivnes*/
+
+.map {
+    position: relative;
+    overflow: hidden;
+    padding-top: 75%;
+    /*Control aspect ratio 75% 4:3 and 56.25% 16:9 */
+    height: 0;
+}
+
+.map iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 /*Footer*/
 
 #footer {
@@ -120,4 +139,14 @@ h1 {
 #footer p {
     margin: 0;
     color: #fff;
+}
+
+
+/*Media query medium size display 768px up*/
+
+@media screen and (min-width:768px) {
+    .map {
+        /*Control aspect ratio 75% 4:3 and 56.25% 16:9 */
+        padding-top: 56.25%;
+    }
 }
